fix a bug with too wide quote- and codeblocks

--- a/css/style.scss
+++ b/css/style.scss
@@ -594,7 +594,7 @@ ul {
 				position: relative;
 				width: 100%;
 		    margin-left: -15px;
-				padding-right: 45px;
+				padding-right: 10px;
 				background-color: $darker;
 				color: white;
 				box-sizing: content-box;
@@ -638,7 +638,7 @@ ul {
 			figure.highlight, div.highlighter-rouge {
 				width: 100%;
 				margin-left: -15px;
-				padding-right: 45px;
+				padding-right: 10px;
 				box-sizing: content-box;
 				white-space: nowrap;
 
